src/main/java/syntactic/test/passing/ifElseAmbiguo.ru
start {
    Int x;
    if (x > 5){
        (IO.out_int(1));
    }
    if (x < 3){
        (IO.out_int(2));
    }
    else{
        (IO.out_int(3));
    }

}

/? CORRECTO: ANALISIS SINTACTICO