src/main/java/syntactic/test/failing/declarationInMiddleOfMethod.ru
start {
    (IO.out_int(fib.sucesion_fib(n)));
    Var x = new x();
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 3 | 5 | Se esperaba Sentencia pero se encontró ID_CLASS: Var |